regenrate the SDK for the updated reset and delete business path
