# ts/src/openapi/src/models/AccountsPayableFinancingServicingData.ts
@@ -19,12 +19,6 @@ import {
     InvoicePaymentPlanFromJSONTyped,
     InvoicePaymentPlanToJSON,
 } from './InvoicePaymentPlan';
-import type { ProductType } from './ProductType';
-import {
-    ProductTypeFromJSON,
-    ProductTypeFromJSONTyped,
-    ProductTypeToJSON,
-} from './ProductType';
 
 /**
  * 
@@ -33,11 +27,11 @@ import {
  */
 export interface AccountsPayableFinancingServicingData {
     /**
-     * 
-     * @type {ProductType}
+     * The type of product being offered. Always `ACCOUNTS_PAYABLE_FINANCING` for `AccountsPayableFinancingServicingData`.
+     * @type {string}
      * @memberof AccountsPayableFinancingServicingData
      */
-    productType: ProductType;
+    productType: AccountsPayableFinancingServicingDataProductTypeEnum;
     /**
      * The total limit allowed - in cents.
      * @type {number}
@@ -58,6 +52,19 @@ export interface AccountsPayableFinancingServicingData {
     availableLimitCents: number;
 }
 
+
+/**
+ * @export
+ */
+export const AccountsPayableFinancingServicingDataProductTypeEnum = {
+    INVOICE_FINANCING: 'INVOICE_FINANCING',
+    TERM_LOAN: 'TERM_LOAN',
+    MCA: 'MCA',
+    LINE_OF_CREDIT: 'LINE_OF_CREDIT',
+    INTEGRATED_MCA: 'INTEGRATED_MCA',
+    ACCOUNTS_PAYABLE_FINANCING: 'ACCOUNTS_PAYABLE_FINANCING'
+} as const;
+export type AccountsPayableFinancingServicingDataProductTypeEnum = typeof AccountsPayableFinancingServicingDataProductTypeEnum[keyof typeof AccountsPayableFinancingServicingDataProductTypeEnum];
 
 
 /**
@@ -81,7 +88,7 @@ export function AccountsPayableFinancingServicingDataFromJSONTyped(json: any, ig
     }
     return {
         
-        'productType': ProductTypeFromJSON(json['productType']),
+        'productType': json['productType'],
         'totalLimitCents': json['totalLimitCents'],
         'pricingPlans': ((json['pricingPlans'] as Array<any>).map(InvoicePaymentPlanFromJSON)),
         'availableLimitCents': json['availableLimitCents'],
@@ -94,7 +101,7 @@ export function AccountsPayableFinancingServicingDataToJSON(value?: AccountsPaya
     }
     return {
         
-        'productType': ProductTypeToJSON(value['productType']),
+        'productType': value['productType'],
         'totalLimitCents': value['totalLimitCents'],
         'pricingPlans': ((value['pricingPlans'] as Array<any>).map(InvoicePaymentPlanToJSON)),
         'availableLimitCents': value['availableLimitCents'],
