# ts/src/openapi/src/models/CreateBusinessRequestBody.ts
@@ -39,7 +39,7 @@ export interface CreateBusinessRequestBody {
      */
     name?: string;
     /**
-     * The business’s address. The address is optional. If you provide the address, you need to provide all the required fields in the address. The address must be a street address, not a PO Box.
+     * The business’s address. The address is optional. If you provide the address, you need to provide all the required fields in the address.
      * @type {Address}
      * @memberof CreateBusinessRequestBody
      */
