# ts/src/openapi/src/models/IntegratedMcaOfferTerms.ts
@@ -13,13 +13,6 @@
  */
 
 import { mapValues } from '../runtime';
-import type { ProductType } from './ProductType';
-import {
-    ProductTypeFromJSON,
-    ProductTypeFromJSONTyped,
-    ProductTypeToJSON,
-} from './ProductType';
-
 /**
  * 
  * @export
@@ -27,11 +20,11 @@ import {
  */
 export interface IntegratedMcaOfferTerms {
     /**
-     * 
-     * @type {ProductType}
+     * The type of product being offered. Always `INTEGRATED_MCA` for `IntegratedMcaOfferTerms`.
+     * @type {string}
      * @memberof IntegratedMcaOfferTerms
      */
-    productType: ProductType;
+    productType: IntegratedMcaOfferTermsProductTypeEnum;
     /**
      * The loan amount - in cents.
      * @type {number}
@@ -65,6 +58,19 @@ export interface IntegratedMcaOfferTerms {
 }
 
 
+/**
+ * @export
+ */
+export const IntegratedMcaOfferTermsProductTypeEnum = {
+    INVOICE_FINANCING: 'INVOICE_FINANCING',
+    TERM_LOAN: 'TERM_LOAN',
+    MCA: 'MCA',
+    LINE_OF_CREDIT: 'LINE_OF_CREDIT',
+    INTEGRATED_MCA: 'INTEGRATED_MCA',
+    ACCOUNTS_PAYABLE_FINANCING: 'ACCOUNTS_PAYABLE_FINANCING'
+} as const;
+export type IntegratedMcaOfferTermsProductTypeEnum = typeof IntegratedMcaOfferTermsProductTypeEnum[keyof typeof IntegratedMcaOfferTermsProductTypeEnum];
+
 
 /**
  * Check if a given object implements the IntegratedMcaOfferTerms interface.
@@ -89,7 +95,7 @@ export function IntegratedMcaOfferTermsFromJSONTyped(json: any, ignoreDiscrimina
     }
     return {
         
-        'productType': ProductTypeFromJSON(json['productType']),
+        'productType': json['productType'],
         'advanceAmountCents': json['advanceAmountCents'],
         'repaymentPercentage': json['repaymentPercentage'],
         'feeFactor': json['feeFactor'],
@@ -104,7 +110,7 @@ export function IntegratedMcaOfferTermsToJSON(value?: IntegratedMcaOfferTerms | 
     }
     return {
         
-        'productType': ProductTypeToJSON(value['productType']),
+        'productType': value['productType'],
         'advanceAmountCents': value['advanceAmountCents'],
         'repaymentPercentage': value['repaymentPercentage'],
         'feeFactor': value['feeFactor'],
