# ts/src/openapi/src/models/InvoiceFinancingOfferTerms.ts
@@ -19,12 +19,6 @@ import {
     InvoicePaymentPlanFromJSONTyped,
     InvoicePaymentPlanToJSON,
 } from './InvoicePaymentPlan';
-import type { ProductType } from './ProductType';
-import {
-    ProductTypeFromJSON,
-    ProductTypeFromJSONTyped,
-    ProductTypeToJSON,
-} from './ProductType';
 
 /**
  * 
@@ -33,11 +27,11 @@ import {
  */
 export interface InvoiceFinancingOfferTerms {
     /**
-     * 
-     * @type {ProductType}
+     * The type of product being offered. Always `INVOICE_FINANCING` for `InvoiceFinancingOfferTerms`.
+     * @type {string}
      * @memberof InvoiceFinancingOfferTerms
      */
-    productType: ProductType;
+    productType: InvoiceFinancingOfferTermsProductTypeEnum;
     /**
      * The total limit allowed for this offer - in cents.
      * @type {number}
@@ -52,6 +46,19 @@ export interface InvoiceFinancingOfferTerms {
     pricingPlans: Array<InvoicePaymentPlan>;
 }
 
+
+/**
+ * @export
+ */
+export const InvoiceFinancingOfferTermsProductTypeEnum = {
+    INVOICE_FINANCING: 'INVOICE_FINANCING',
+    TERM_LOAN: 'TERM_LOAN',
+    MCA: 'MCA',
+    LINE_OF_CREDIT: 'LINE_OF_CREDIT',
+    INTEGRATED_MCA: 'INTEGRATED_MCA',
+    ACCOUNTS_PAYABLE_FINANCING: 'ACCOUNTS_PAYABLE_FINANCING'
+} as const;
+export type InvoiceFinancingOfferTermsProductTypeEnum = typeof InvoiceFinancingOfferTermsProductTypeEnum[keyof typeof InvoiceFinancingOfferTermsProductTypeEnum];
 
 
 /**
@@ -74,7 +81,7 @@ export function InvoiceFinancingOfferTermsFromJSONTyped(json: any, ignoreDiscrim
     }
     return {
         
-        'productType': ProductTypeFromJSON(json['productType']),
+        'productType': json['productType'],
         'totalLimitCents': json['totalLimitCents'],
         'pricingPlans': ((json['pricingPlans'] as Array<any>).map(InvoicePaymentPlanFromJSON)),
     };
@@ -86,7 +93,7 @@ export function InvoiceFinancingOfferTermsToJSON(value?: InvoiceFinancingOfferTe
     }
     return {
         
-        'productType': ProductTypeToJSON(value['productType']),
+        'productType': value['productType'],
         'totalLimitCents': value['totalLimitCents'],
         'pricingPlans': ((value['pricingPlans'] as Array<any>).map(InvoicePaymentPlanToJSON)),
     };
