# ts/src/openapi/src/models/TermLoanServicingData.ts
@@ -13,13 +13,6 @@
  */
 
 import { mapValues } from '../runtime';
-import type { ProductType } from './ProductType';
-import {
-    ProductTypeFromJSON,
-    ProductTypeFromJSONTyped,
-    ProductTypeToJSON,
-} from './ProductType';
-
 /**
  * 
  * @export
@@ -27,11 +20,11 @@ import {
  */
 export interface TermLoanServicingData {
     /**
-     * 
-     * @type {ProductType}
+     * The type of product being offered. Always `TERM_LOAN` for `TermLoanServicingData`.
+     * @type {string}
      * @memberof TermLoanServicingData
      */
-    productType: ProductType;
+    productType: TermLoanServicingDataProductTypeEnum;
     /**
      * The total loan amount - in cents.
      * @type {number}
@@ -71,6 +64,19 @@ export interface TermLoanServicingData {
 }
 
 
+/**
+ * @export
+ */
+export const TermLoanServicingDataProductTypeEnum = {
+    INVOICE_FINANCING: 'INVOICE_FINANCING',
+    TERM_LOAN: 'TERM_LOAN',
+    MCA: 'MCA',
+    LINE_OF_CREDIT: 'LINE_OF_CREDIT',
+    INTEGRATED_MCA: 'INTEGRATED_MCA',
+    ACCOUNTS_PAYABLE_FINANCING: 'ACCOUNTS_PAYABLE_FINANCING'
+} as const;
+export type TermLoanServicingDataProductTypeEnum = typeof TermLoanServicingDataProductTypeEnum[keyof typeof TermLoanServicingDataProductTypeEnum];
+
 
 /**
  * Check if a given object implements the TermLoanServicingData interface.
@@ -96,7 +102,7 @@ export function TermLoanServicingDataFromJSONTyped(json: any, ignoreDiscriminato
     }
     return {
         
-        'productType': ProductTypeFromJSON(json['productType']),
+        'productType': json['productType'],
         'loanAmountCents': json['loanAmountCents'],
         'originationFeeCents': json['originationFeeCents'],
         'principalBalanceCents': json['principalBalanceCents'],
@@ -112,7 +118,7 @@ export function TermLoanServicingDataToJSON(value?: TermLoanServicingData | null
     }
     return {
         
-        'productType': ProductTypeToJSON(value['productType']),
+        'productType': value['productType'],
         'loanAmountCents': value['loanAmountCents'],
         'originationFeeCents': value['originationFeeCents'],
         'principalBalanceCents': value['principalBalanceCents'],
