# ts/src/openapi/src/models/index.ts
@@ -105,7 +105,6 @@ export * from './PlatformInvoiceIdAlreadyExistsForAnotherIssuedProductException'
 export * from './PrimaryBusinessOwnerAlreadyExistsForBusinessException';
 export * from './PrimaryBusinessOwnerAlreadyExistsWithEmailException';
 export * from './PrimaryBusinessOwnerNotFoundException';
-export * from './ProductType';
 export * from './SessionInvoice';
 export * from './SessionInvoiceWithInvoiceFile';
 export * from './SomeOffersHaveExpiredException';
